<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.aldofieuw.android.cyclart.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/image1"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:scaleType="fitCenter"
                android:src="@drawable/logo"/>

        </RelativeLayout>

        <!--intro text-->
        <TextView

            android:id="@+id/textView"
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <!--TODO: make this a slideshow-->
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="@string/ImageDescription"
            android:scaleType="centerCrop"
            android:src="@drawable/image3" />


        <!--TODO: make intents (click on address -> google maps; phone number -> call; e-mail -> open e-mail app with correct mail) -->

        <!--Start Contact-->
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"
            android:textSize="24sp"
            android:text="@string/contact"/>

        <!--Location-->
        <LinearLayout
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ic_location_on_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="map"
                android:text="@string/location"/>
        </LinearLayout>

        <!-- GSM -->
        <LinearLayout
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ic_local_phone_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:text="@string/gsm"/>
        </LinearLayout>

        <!--e-mail-->
        <LinearLayout
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:background="@drawable/ic_email_black_24dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:text="@string/email"/>
        </LinearLayout>

        <!-- Website -->
        <LinearLayout
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ic_public_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/website"/>
        </LinearLayout>

        <!--business hours-->
        <LinearLayout
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ic_access_alarm_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
